corrected white space on right during mr

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,9 @@
     color: var(--primary);
     background-color: var(--light);
     line-height: 1.5;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
   }
   
   h1,
